# datelib

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Doxyfile  HolidayCalendar_8h.html  HolidayCalendar_8h__incl.map  HolidayCalendar_8h__incl.md5  HolidayCalendar_8h_source.html  HolidayRule_8h.html  HolidayRule_8h__dep__incl.map  HolidayRule_8h__dep__incl.md5  HolidayRule_8h__incl.map  HolidayRule_8h__incl.md5  HolidayRule_8h_source.html  README.md  README_8md.html  annotated.html  classdatelib_1_1ExplicitDateRule-members.html  classdatelib_1_1ExplicitDateRule.html  classdatelib_1_1ExplicitDateRule__inherit__graph.map  classdatelib_1_1ExplicitDateRule__inherit__graph.md5  classdatelib_1_1FixedDateRule-members.html  classdatelib_1_1FixedDateRule.html  classdatelib_1_1FixedDateRule__inherit__graph.map  classdatelib_1_1FixedDateRule__inherit__graph.md5  classdatelib_1_1HolidayCalendar-members.html  classdatelib_1_1HolidayCalendar.html  classdatelib_1_1HolidayRule-members.html  classdatelib_1_1HolidayRule.html  classdatelib_1_1HolidayRule__inherit__graph.map  classdatelib_1_1HolidayRule__inherit__graph.md5  classdatelib_1_1NthWeekdayRule-members.html  classdatelib_1_1NthWeekdayRule.html  classdatelib_1_1NthWeekdayRule__coll__graph.map  classdatelib_1_1NthWeekdayRule__inherit__graph.md5  classes.html  date_8h.html  date_8h__incl.map  (+34 more)
.github/: BRANCH_PROTECTION.md  CODEOWNERS  CUSTOM_AGENTS.md  DOCUMENTATION_WORKFLOW.md  GITHUB_PAGES_SETUP.md  NOTIFICATIONS.md  RELEASE_WORKFLOW_SETUP.md  copilot-instructions.md
.github/agents/: architect.agent.md  architect.md  cpp-code-reviewer.agent.md
.github/workflows/: branch-protection.yml  build-and-test.yml  generate-docs.yml  release-prepare.yml  release-publish.yml
_codeql_build_dir/: libdatelib.so.1  libdatelib.so.1.0.0
_codeql_build_dir/tests/: test_datelib
cmake/: Catch2Setup.cmake  ClangFormat.cmake
include/datelib/: HolidayCalendar.h  HolidayRule.h  date.h  date_util.h  exceptions.h  holiday_calendar.h  period.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+7 more)
src/: HolidayCalendar.cpp  HolidayRule.cpp  date.cpp  holiday_calendar.cpp  holiday_rule.cpp  period.cpp
tests/: CMakeLists.txt  test_HolidayCalendar.cpp  test_HolidayRule.cpp  test_date.cpp  test_holiday_calendar.cpp  test_holiday_rule.cpp
